@@ -1,3 +1,7 @@
+Sun 18 Jun 2023 Aleksey Kravchenko
+	* Support leading and trailing spaces in a file names
+	* Changed the simple file format to fit the sfv format
+
 Tue 13 Jun 2023 Aleksey Kravchenko
 	* Bugfix: Fix slash usage with wilcards on Windows
 
